# Carrier-Tender-Optimization

.devcontainer/: devcontainer.json
Tender Optimization/: DEPLOYMENT.md  DEPLOYMENT_ERROR_FIX.md  DEPLOYMENT_SUMMARY.md  README.md  check_deployment.py  dashboard.py  dashboard_new.py  dashboard_old.py  fix_deployment.py  pyproject.toml  requirements.txt  requirements_clean.txt  test_imports.py
Tender Optimization/components/: __init__.py  data_loader.py  data_processor.py  optimization.py
