[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "carrier-tender-optimization"
version = "1.0.0"
description = "Carrier Tender Optimization Dashboard"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "streamlit>=1.28.0",
    "pandas>=2.0.0", 
    "numpy>=1.24.0",
    "plotly>=5.15.0",
    "pulp>=2.7.0",
    "scikit-learn>=1.3.0",
    "openpyxl>=3.1.0",
    "xlrd>=2.0.0"
]

[project.urls]
Repository = "https://github.com/yourusername/carrier-tender-optimization"

[tool.streamlit]
# Streamlit specific configuration
main_module = "dashboard.py"
